// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Zoomer > renders without crashing 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; overflow: clip; display: flex; align-items: center; justify-content: center;"
  >
    <div>
      <div>
        Test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZoomerWithinSize > renders without crashing 1`] = `
<DocumentFragment>
  <div>
    <div>
      Test
    </div>
  </div>
</DocumentFragment>
`;
